Removed ios input shadows, fixed focus outline issue on form-choice inputs and increased line-height on mobile

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -52,6 +52,7 @@ fieldset {
 }
 
 .form__control {
+    appearance: none;
     border-radius: $input-border-radius;
     height: $input-height-base;
     line-height: $input-height-base;
@@ -616,20 +617,14 @@ fieldset {
         display: inline-block;
         width: 100%;
     }
-
-    // .control__label > .form__control {
-    //     width: auto;
-    // }
 }
 
 .form-choice {
     > .controls {
         margin-top: 11px; // magic number to align with main label
-        overflow: hidden;
 
         > .control__label {
-            clear: left;
-            float: left;
+            line-height: $line-height-large;
         }
     }
 }
